# datastream

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CLAUDE.md  README.md  alembic.ini  justfile  pyproject.toml  requirements.txt  setup.py  trigger.py  usage.typ
api/: Cargo.toml
builders/server/: AGENTS.md  config.py  db.py  loader.py  log_config.py  main.py  pyproject.toml  runner.py  validator.py
builders/server/api/: routes.py
builders/server/benchmarks/: bench_build.py  conftest.py
builders/server/calendars/: definitions.py  interface.py  registry.py  utils.py
builders/server/calendars/definitions/: always_open.py  everyday.py  nyse_daily.py  weekday.py
builders/server/core/: auth.py
builders/server/core/api/: AGENTS.md  routes.py  security.py
builders/server/core/auth/: AGENTS.md  __init__.py  __main__.py
builders/server/core/calendars/: AGENTS.md  interface.py  registry.py  utils.py
builders/server/core/db/: AGENTS.md  connection.py  datasets.py
builders/server/core/github/: __init__.py  client.py
builders/server/core/runtime/: AGENTS.md  config.py  loader.py  registry.py  runner.py  serialization.py  validator.py
builders/server/core/service/: AGENTS.md  builder.py  catalog.py  locks.py  models.py  orchestrator.py  proposals.py  scheduler.py  store.py  timestamps.py  worker.py
builders/server/core/utils/: retry.py  semver.py
builders/server/db/: connection.py  datasets.py  locks.py
builders/server/db/migrations/: env.py  script.py.mako
builders/server/runtime/: config.py  isolated_worker.py  loader.py  registry.py  runner.py  validator.py  venv_management.py
builders/server/service/: builder.py  catalog.py  locks.py  models.py  orchestrator.py  scheduler.py  timestamps.py  worker.py
builders/server/tests/: conftest.py  test_config.py  test_db.py  test_loader.py  test_main.py  test_runner.py  test_trigger.py  test_validator.py
builders/server/tests/api/: test_routes.py
builders/server/tests/calendars/: test_always_open.py  test_everyday.py  test_nyse_daily.py  test_utils.py  test_weekday.py
builders/server/tests/core/: conftest.py  test_auth.py
builders/server/utils/: retry.py  semver.py
builders/server/workers/: subprocess_worker.py
(+161 files in other folders)
