[project]
name = "builder-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.2.0",
    "psycopg_pool>=3.2.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "exchange-calendars>=4.13",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["builders/server"]
testpaths = ["builders/server/tests"]
markers = [
    "integration: integration tests requiring a real postgres (via testcontainers)",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.0.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PIE", "SIM", "T20", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
mypy_path = "builders/server"
